--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,8 +38,8 @@
                 </div>
             </div>
             <div class="row text-center">
-                <img src="../../static/images/FBcover1200x628.png" width="400"
-                     th:src="@{/images/FBcover1200x628.png}"/>
+                <img src="../../static/images/waterfall.gif" width="400"
+                     th:src="@{/images/waterfall.gifupdated }"/>
             </div>
         </div>
     </div>
